Changed to single file

--- a/sudoku.html
+++ b/sudoku.html
@@ -3,8 +3,34 @@
 <head>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <style>
+        body{
+    background-image: url("https://drive.google.com/uc?export=view&id=1pvYn5vgP5Yj_VH2hOY25YjIxmzeruClo");
+    background-size: contain;
+    
+    text-align: center;
+}
+p{
+    margin-top: 2%;
+    margin-bottom: 0;
+    text-align: center;
+    font-family: 'Nanum Pen Script', cursive;
+    font-size: 80px;
+}
+#container{
+    display: grid;
+    grid-template-columns: repeat(9,11%);
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-bottom: 10%;
+    box-shadow: black;
+}
+input{
+    height: 70px;
+    font-size: large;
+    text-align: center;
+}
+    </style>>
 </head>
 <body>
     <p>SUDOKU</p>
